--- a/pages/MissBooks/assets/css/details.css
+++ b/pages/MissBooks/assets/css/details.css
@@ -1,93 +1,110 @@
-.book-details{
-    margin-top:20px;
-    display: flex;
-    flex-direction: column;
-    width:100%;
-    padding-bottom: 20px;
+.book-details {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding-bottom: 20px;
+  color: #ffffff;
 }
 
-
-.book-details-list{
-    margin-bottom:20px;
-    display: flex;
-    width:100%;
-    justify-content: space-around;
+.book-details-list {
+  margin-bottom: 20px;
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
 }
 
-.book-info{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width:50%;
+.book-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
 }
 
-.book-details img{
-   width:250px;
+.book-details img {
+  width: 250px;
 }
 
-.review-add{
-    width:100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.book-details-image {
+  position: relative;
 }
 
-.book-details-image{
-position: relative;
+.on-sale {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 2rem;
+  background-color: green;
 }
 
-.on-sale{
-position: absolute;
-top:0;
-right:0;
-font-size: 2rem;
-background-color: green;
+.decription-area {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100ch;
 }
 
-.decription-area{
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 100ch;
+.red {
+  color: red;
 }
 
-
-.red{
-    color: red;
+.green {
+  color: green;
 }
 
-.green{
-    color: green;
+.read-more {
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: black;
 }
 
-.read-more{
-    cursor: pointer;
-    font-size: 1.2rem;
-    color: black;
+.back-button {
+  margin-bottom: 20px;
 }
 
-.back-button{
-    margin-bottom: 20px;
+.submit-button {
+  margin-top: 20px;
+  width: 100px;
 }
 
-.submit-button{
-    margin-top: 20px;
+.review-add {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
 }
 
-.delete-button{
-    width:40px;
-    height:40px;
-    border: 3px solid #14213D;
-    border-radius: 10px;
-    font-weight: 600;
-    font-size: 1.2rem;
-    color: #14213D;
-    background-color: #E5E5E5;
-    cursor: pointer;
+.review-add input {
+  background-color: #2a2a2ad8;
+  padding: 5px 10px 10px;
+  margin-bottom: 10px;
+  border: 0;
+  color: #f1f1f1;
+  border-radius: 5px;
+  width: 250px;
 }
 
-.prev-next{
-    display: flex;
-    justify-content: space-between;
-    padding:20px 0;
+.review-add textarea {
+  background-color: #2a2a2ad8;
+  padding: 5px 10px 10px;
+  border: 0;
+  color: #f1f1f1;
+  border-radius: 5px;
+}
+
+.reviews-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 15px;
+}
+
+.review button{
+visibility: hidden;
+transform: translateY();
+}
+
+.prev-next {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0;
 }
