--- a/pages/MissKeep/assets/css/cmps-css/note-preview.css
+++ b/pages/MissKeep/assets/css/cmps-css/note-preview.css
@@ -1,147 +1,151 @@
 .notes {
-    column-count: 4;
-    column-gap: 1em;
-    padding: 0 20px;
+  /* column-count: 4;
+    column-gap: 1em; */
+  padding: 0 20px;
+  display: grid;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  grid-gap: 15px;
+  padding-bottom:20px;
 }
 
 .note {
-    width: 100%;
-    padding: 10px 10px 0 10px;
-    height: 100%;
-    overflow: hidden;
-    border-radius: 5px;
-    background-color: #eee;
-    display: inline-block;
-    margin: 0 0 1em;
+  width: 100%;
+  padding: 10px 10px 0 10px;
+  max-height: 100%;
+  overflow: hidden;
+  border-radius: 5px;
+  background-color: #eee;
+  display: inline-block;
+  /* margin: 0 0 1em; */
 }
 
-@media(max-width: 1080px) {
-    .notes {
-        column-count: 3;
-    }
+@media (max-width: 1080px) {
+  .notes {
+    column-count: 3;
+  }
 }
-@media(max-width: 820px) {
-    .notes {
-        column-count: 2;
-    }
+@media (max-width: 620px) {
+  .notes {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
 }
 
 .note-header {
-    text-align: center;
-    font-weight: 700;
-    font-size: 1.2rem;
-    margin-bottom: 5px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 1.2rem;
+  margin-bottom: 5px;
 }
 
 .note img {
-    width: 100%;
-    height: 250px;
+  width: 100%;
+  height: 250px;
 }
 
-@media(max-width:620px){
-    .note img{
-        height:100%;
-    }
+@media (max-width: 620px) {
+  .note img {
+    height: 100%;
+  }
 }
 
 .note .note-img-container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 /* BUTTONS */
 
 .note-btns {
-    transform: translateY(35px);
-    align-self: flex-end;
-    color: #007DFC;
-    visibility: hidden;
-    display: flex;
-    justify-content: flex-end;
+  transform: translateY(35px);
+  align-self: flex-end;
+  color: #007dfc;
+  visibility: hidden;
+  display: flex;
+  justify-content: flex-end;
 }
 
-@media(max-width:500px){
-    .note-btns{
-        transform: translateY(-5px);
-        visibility: visible;
-    }
+@media (max-width: 500px) {
+  .note-btns {
+    transform: translateY(-5px);
+    visibility: visible;
+  }
 }
-
 
 .note-btns button {
-    color: #121212;
-    padding: 10px 0 0 15px;
-    background-color: transparent;
-    border: 0;
+  color: #121212;
+  padding: 10px 0 0 15px;
+  background-color: transparent;
+  border: 0;
 }
 
 .note-btns button:hover {
-    background-color: transparent;
-    transition: 0.3s;
-    color: #007DFC;
+  background-color: transparent;
+  transition: 0.3s;
+  color: #007dfc;
 }
 
 .note:hover .note-btns {
-    transform: translateY(-5px);
-    transition: 0.3s;
-    visibility: visible;
+  transform: translateY(-5px);
+  transition: 0.3s;
+  visibility: visible;
 }
 
 .remove-note-btn {
-    align-self: flex-start;
-    background-color: transparent;
-    border: 0;
+  align-self: flex-start;
+  background-color: transparent;
+  border: 0;
 }
 
 .remove-note-btn:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .edit-note-btn {
-    align-self: flex-start;
-    background-color: transparent;
-    border: 0;
+  align-self: flex-start;
+  background-color: transparent;
+  border: 0;
 }
 
 .edit-note-btn:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .pin-note-btn {
-    align-self: flex-start;
-    background-color: transparent;
-    border: 0;
+  align-self: flex-start;
+  background-color: transparent;
+  border: 0;
 }
 
 .pin-note-btn:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .todo-note {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .todo {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .remove-todo {
-    width: 20px;
-    height: 20px;
-    padding: 0;
+  width: 20px;
+  height: 20px;
+  padding: 0;
 }
 
 iframe {
-    width: 100%;
+  width: 100%;
 }
 
-@media(max-width:620px){
-    iframe{
-        height:100%;
-    }
+@media (max-width: 620px) {
+  iframe {
+    height: 100%;
+  }
 }
