--- a/pages/MissBooks/assets/css/filter.css
+++ b/pages/MissBooks/assets/css/filter.css
@@ -3,6 +3,14 @@
     justify-content: space-between;
 }
 
+@media(max-width: 620px){
+    .books-filter-search{
+        flex-direction: column;
+        align-items: center;
+    }
+
+}
+
 .book-filter {
     display: flex;
     flex-direction: column;
@@ -40,13 +48,19 @@
     flex-direction: column;
     background-color: #2a2a2ad8;
     padding: 5px 10px 10px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     color: #f1f1f1;
     border-radius: 5px;
     width: 250px;
     cursor: auto;
     overflow: hidden;
     justify-content: space-between;
+}
+
+@media (max-width: 620px){
+.search-books {
+    margin-bottom: 10px;
+}
 }
 
 .search-input-books .fas {
