--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,13 +173,23 @@ option {
 }
 
 .curr-page span {
-  background: linear-gradient(0deg, rgb(0 93 237) 14%, rgb(254 254 255) 128%);
+  color: #007DFC;
+}
+
+.fa-clipboard {
+  background: linear-gradient(349deg, rgb(255 255 255) 14%, rgb(33 250 100) 64%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.fa-clipboard, .fa-book, .fa-mail-bulk {
-  background: linear-gradient(0deg, rgb(0 93 237) 14%, rgb(254 254 255) 128%);
+.fa-book {
+  background: linear-gradient(349deg, rgb(255 255 255) 14%, rgb(255 228 36) 64%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.fa-mail-bulk {
+  background: linear-gradient(349deg, rgb(255 255 255) 14%, rgb(255 106 0) 64%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
