--- a/pages/MissKeep/assets/css/cmps-css/note-editor.css
+++ b/pages/MissKeep/assets/css/cmps-css/note-editor.css
@@ -1,7 +1,7 @@
 .note-editor-bg {
     min-height: 100vh;
     width: 100%;
-    background-color:#000000e6;;
+    background-color:#000000e6;
     position: fixed;
     top: 0;
     display: flex;
