--- a/pages/MissEmail/assets/css/email-list.css
+++ b/pages/MissEmail/assets/css/email-list.css
@@ -156,16 +156,16 @@
     border: 1px solid #f1f1f1;
     height: 26px;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 7px;
 }
 
 .prog-bar {
-    background-color: #027DFC;
+    background-image: linear-gradient(148deg, #374be6 25%, #121212 25%, #121212 50%, #374be6 50%, #374be6 75%, #121212 75%, #121212 100%);
+    background-size: 37.74px 23.58px;
     height: 24px;
-    width: 33%;
     position: absolute;
     top: 0;
-    border-radius: 10px;
+    border-radius: 7px;
     transition: all 0.5s ease 0s;
 }
 
