--- a/pages/MissEmail/assets/css/email-preview.css
+++ b/pages/MissEmail/assets/css/email-preview.css
@@ -6,6 +6,8 @@
     justify-content: space-between;
     cursor: pointer;
     padding: 5px 0;
+    box-shadow: inset 0px 0px 16px 1px #0c0c0c;
+    border-radius: 8px;
 }
 
 .email-preview-container:hover {
@@ -58,7 +60,7 @@
 }
 
 .txt-body-mid-container p {
-    color: grey;
+    color: #8a8a8a
 }
 
 .txt-body-end-container {
