--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -176,20 +176,9 @@ option {
   color: #007DFC;
 }
 
-.fa-clipboard {
-  background: linear-gradient(349deg, rgb(255 255 255) 14%, rgb(33 250 100) 64%);
+.fa-clipboard, .fa-book, .fa-mail-bulk {
+  background: linear-gradient(349deg, rgb(255 255 255 / 88%) 14%, rgb(26 115 255) 64%);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.fa-book {
-  background: linear-gradient(349deg, rgb(255 255 255) 14%, rgb(255 228 36) 64%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.fa-mail-bulk {
-  background: linear-gradient(349deg, rgb(255 255 255) 14%, rgb(255 106 0) 64%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
