--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -243,3 +243,20 @@ option {
     opacity: 1;
   }
 }
+
+/* NOTIFICATIONS */
+
+.notification-box{
+  position:fixed;
+  top:100px;
+  right:0;
+  border-radius:5px;
+  background-color: #007DFC;
+  color:#f1f1f1;
+  z-index: 1;
+  font-size:1rem;
+}
+
+.notification-box h3{
+  padding:0 10px 10px;
+}
