--- a/pages/MissKeep/assets/css/cmps-css/note-editor.css
+++ b/pages/MissKeep/assets/css/cmps-css/note-editor.css
@@ -120,6 +120,12 @@
     color:#007DFC;
 }
 
+.editor-btns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .editor-btns button, .editor-form label {
     color: #007DFC;
     font-size: 2rem;
