--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,3 +1,6 @@
 .home{
     padding-top:120px;
+    color:#f1f1f1;
+    background: linear-gradient(0deg, rgba(51, 51, 51, 1) 6%, rgba(18, 18, 18, 1) 47%);
+    min-height: 100vh;
 }
