--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -180,7 +180,7 @@ option {
   -webkit-text-fill-color: transparent;
 }
 
-.fa-clipboard, .fa-book, .fa-mail-bulk {
+.fa-clipboard, .fa-book, .fa-mail-bulk, .fa-home, .fa-user {
   background: linear-gradient(349deg, rgb(255 255 255 / 88%) 14%, rgb(26 115 255) 64%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
