--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,5 +1,5 @@
-.about{
-    padding:120px 20px 0 20px;
+.about {
+    padding: 120px 20px 0 20px;
     display: flex;
     flex-wrap: wrap;
     color: #f1f1f1;
@@ -7,68 +7,74 @@
     min-height: 100vh;
 }
 
-.creators-container{
+.creators-container {
     display: flex;
-    margin-top:100px;
+    margin-top: 100px;
 }
 
-.roei-container{
+.creators-container h2 {
+    margin-left: 80px;
+    margin-bottom: 35px;
+}
+
+.roei-container {
     display: flex;
     flex-direction: column;
-    width:50%;
+    width: 50%;
     flex-wrap: wrap;
-    margin-right:20px;
+    margin-right: 20px;
 }
 
-.info{
+.info {
     display: flex;
     align-items: center;
 }
 
-.about .img-container{
-    max-width:300px;
-    max-height:300px;
-    margin-right:30px;
+.about .img-container {
+    max-width: 300px;
+    max-height: 300px;
+    margin-right: 30px;
 }
 
-.about img{
+.about img {
     object-fit: cover;
     border-radius: 50%;
-    width:100%;
-    max-height:100%;
+    width: 250px;
+    height: 250px;
 }
 
-.liam-container{
+.liam-container {
     display: flex;
     flex-direction: column;
+    margin-left: 80px;
+    margin-bottom: 35px;
+    width: 50%;
 }
 
-.social-links{
+.social-links {
     display: flex;
 }
 
-.social-links li{
-    font-size:1.5rem;
-    margin:10px 10px 0 0;
+.social-links li {
+    font-size: 1.5rem;
+    margin: 10px 10px 0 0;
 }
 
-.facebook{
-color: #4267B2
+.facebook {
+    color: #4267B2
 }
 
-.instagram{
-    
-    background:linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+.instagram {
+    background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-.linkedin{
-color:#0e76a8;
+.linkedin {
+    color: #0e76a8;
 }
 
-.social-links li:hover{
-filter:brightness(80%);
-transition:0.3s;
-
+.social-links li:hover {
+    filter: brightness(80%);
+    transition: 0.3s;
 }
