--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -9,7 +9,13 @@
 
 .creators-container {
     display: flex;
-    margin-top: 100px;
+    margin-top: 80px;
+}
+
+@media(max-width: 1050px){
+    .creators-container{
+        flex-direction: column;
+    }
 }
 
 .creators-container h2 {
@@ -22,7 +28,8 @@
     flex-direction: column;
     width: 50%;
     flex-wrap: wrap;
-    margin-right: 20px;
+    margin-right: 20px; 
+    margin-right: 50px;
 }
 
 .info {
@@ -45,11 +52,44 @@
 
 .liam-container {
     display: flex;
-    flex-direction: column;
-    margin-left: 80px;
+    flex-direction: column;  
     margin-bottom: 35px;
     width: 50%;
 }
+
+@media(max-width: 1050px){
+
+    .creators-container{
+        margin-top: 30px;
+    }
+
+    .liam-container{
+        width:100%;
+    }
+    .roei-container{
+        width:100%;
+        margin-bottom: 30px;
+    }
+}
+
+@media(max-width: 650px){
+
+    .creators-container h2 {
+        margin-left: 10px;
+        margin-bottom: 35px;
+    }
+
+  .about img{
+      width:150px;
+      height:150px;
+  }
+
+  .info{
+      font-size:0.8rem
+  }
+}
+
+
 
 .social-links {
     display: flex;
