--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,6 +1,19 @@
-.home{
-    padding:120px 20px 0 20px;
-    color:#f1f1f1;
-    background: linear-gradient(0deg, rgba(51, 51, 51, 1) 6%, rgba(18, 18, 18, 1) 47%);
+.home {
+    padding: 120px 20px 0 20px;
+    color: #f1f1f1;
+    background: #111111;
     min-height: 100vh;
+}
+
+.vid-wrapper {
+    display: flex;
+}
+
+.vid-wrapper video {
+    margin: auto;
+}
+
+.home-links {
+    display: flex;
+    justify-content: space-evenly;
 }
