--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -132,6 +132,7 @@ option {
 
 .nav-container {
   position: absolute;
+  top: 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
