--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -17,3 +17,27 @@
     display: flex;
     justify-content: space-evenly;
 }
+
+.home-links i {
+    font-size: 40px;
+    -webkit-transition: font-size 2s;
+}
+
+.home-link:hover i {
+    transition: .3s ease-in-out;
+    font-size: 60px;
+    -webkit-transition: font-size 2s;
+}
+
+.home-link {
+    padding: 20px;
+    cursor: pointer;
+    border-radius: 8px;
+    -webkit-transition: background-color 2s;
+}
+
+.home-link:hover {
+    transition: .3s ease-in-out;
+    background-color: rgba(117, 117, 117, 0.095);
+    -webkit-transition: background-color 2s;
+}
