--- a/pages/MissBooks/assets/css/details.css
+++ b/pages/MissBooks/assets/css/details.css
@@ -100,6 +100,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
+  line-height: 2;
 }
 
 .review-add * {
@@ -163,6 +164,7 @@
   align-items: center;
   max-width: 250px;
   justify-content: space-between;
+  flex-direction: row-reverse;
 }
 
 .rating-add:not(:checked)>input {
