--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -7,13 +7,17 @@
     min-height: 100vh;
 }
 
+.about .text-container {
+    line-height: 1.5;
+}
+
 .creators-container {
     display: flex;
     margin-top: 80px;
 }
 
-@media(max-width: 1050px){
-    .creators-container{
+@media(max-width: 1050px) {
+    .creators-container {
         flex-direction: column;
     }
 }
@@ -28,7 +32,7 @@
     flex-direction: column;
     width: 50%;
     flex-wrap: wrap;
-    margin-right: 20px; 
+    margin-right: 20px;
     margin-right: 50px;
 }
 
@@ -48,48 +52,42 @@
     border-radius: 50%;
     width: 250px;
     height: 250px;
+    box-shadow: 0px 0px 13px 2px black;
 }
 
 .liam-container {
     display: flex;
-    flex-direction: column;  
+    flex-direction: column;
     margin-bottom: 35px;
     width: 50%;
 }
 
-@media(max-width: 1050px){
-
-    .creators-container{
+@media(max-width: 1050px) {
+    .creators-container {
         margin-top: 30px;
     }
-
-    .liam-container{
-        width:100%;
+    .liam-container {
+        width: 100%;
     }
-    .roei-container{
-        width:100%;
+    .roei-container {
+        width: 100%;
         margin-bottom: 30px;
     }
 }
 
-@media(max-width: 650px){
-
+@media(max-width: 650px) {
     .creators-container h2 {
         margin-left: 10px;
         margin-bottom: 35px;
     }
-
-  .about img{
-      width:150px;
-      height:150px;
-  }
-
-  .info{
-      font-size:0.8rem
-  }
+    .about img {
+        width: 150px;
+        height: 150px;
+    }
+    .info {
+        font-size: 0.8rem
+    }
 }
-
-
 
 .social-links {
     display: flex;
