--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -5,19 +5,19 @@
     min-height: 100vh;
 }
 
-.vid-wrapper {
+.img-wrapper {
     display: flex;
     width: 500px;
     margin: auto;
 }
 
 @media (max-width:550px) {
-    .vid-wrapper {
+    .img-wrapper {
         width: 250px;
     }
 }
 
-.vid-wrapper video {
+.img-wrapper img {
     margin: auto;
     width: 100%;
     height: 100%;
