--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -7,7 +7,7 @@
 
 .img-wrapper {
     display: flex;
-    width: 500px;
+    width: 300px;
     margin: auto;
 }
 
@@ -21,9 +21,11 @@
     margin: auto;
     width: 100%;
     height: 100%;
+    animation: wobble-hor-bottom 6s infinite both;
 }
 
 .home-links {
+    margin-top: 100px;
     display: flex;
     justify-content: space-evenly;
 }
@@ -50,4 +52,26 @@
     transition: .3s ease-in-out;
     background-color: rgba(117, 117, 117, 0.095);
     -webkit-transition: background-color 2s;
+}
+
+@keyframes wobble-hor-bottom {
+    0%, 100% {
+        transform: translateX(0%);
+        transform-origin: 50% 50%;
+    }
+    15% {
+        transform: translateX(-30px) rotate(-6deg);
+    }
+    30% {
+        transform: translateX(15px) rotate(6deg);
+    }
+    45% {
+        transform: translateX(-15px) rotate(-3.6deg);
+    }
+    60% {
+        transform: translateX(9px) rotate(2.4deg);
+    }
+    75% {
+        transform: translateX(-6px) rotate(-1.2deg);
+    }
 }
