--- a/pages/MissEmail/assets/css/email-preview.css
+++ b/pages/MissEmail/assets/css/email-preview.css
@@ -6,7 +6,7 @@
     justify-content: space-between;
     cursor: pointer;
     padding: 5px 0;
-    box-shadow: inset 0px 0px 16px 1px #0c0c0c;
+    box-shadow: inset 0px 0px 7px 0px #0c0c0c;
     border-radius: 8px;
 }
 
@@ -57,6 +57,10 @@
 
 .txt-body-mid-container h2 {
     font-size: 18px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .txt-body-mid-container p {
