--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -45,6 +45,7 @@
     max-width: 300px;
     max-height: 300px;
     margin-right: 30px;
+    margin-bottom: 30px;
 }
 
 .about img {
@@ -85,7 +86,8 @@
         height: 150px;
     }
     .info {
-        font-size: 0.8rem
+        font-size: 0.8rem;
+        flex-wrap: wrap;
     }
 }
 
