better mobile view, added date to the mail body

--- a/pages/MissEmail/assets/css/email-body.css
+++ b/pages/MissEmail/assets/css/email-body.css
@@ -11,6 +11,11 @@
     margin-bottom: 20px;
 }
 
+.email-body .body-header {
+    display: flex;
+    justify-content: space-between;
+}
+
 .email-body button {
     width: 100px;
 }
